force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/SOLXYZCSO001__ReportDefinition__c.object-meta.xml
<CustomObject>
    <description>ReportDefinition</description>
    <label>帳票定義</label>
    <nameField>
        <label>帳票定義名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>