force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__AuthorityUser__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__AuthorityUser__c</fullName>
    <label>権限（ユーザ）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>