force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__DataType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DataType__c</fullName>
    <label>種別</label>
    <length>128</length>
    <type>Text</type>
</CustomField>