force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ECMImageFlg__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ECMImageFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleekdrive画像出力者フラグ</label>
    <type>Checkbox</type>
</CustomField>