force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ErrorMeans__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ErrorMeans__c</fullName>
    <description>エラーメッセージ</description>
    <label>ErrorMeans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>