force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__IsOutputHistory__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsOutputHistory__c</fullName>
    <label>帳票出力レコード履歴出力</label>
    <length>32</length>
    <type>Text</type>
</CustomField>