force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__MappingMode__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MappingMode__c</fullName>
    <label>マッピングモード</label>
    <length>128</length>
    <type>Text</type>
</CustomField>