force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectLabel__c</fullName>
    <label>オブジェクト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>