force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__OverlayIDID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayIDID__c</fullName>
    <label>オーバレイID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>