force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__OverlayVersion__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayVersion__c</fullName>
    <description>オーバレイのバージョンです。</description>
    <label>OverlayVersion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>