force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__OverlayVersionMismatchFlg__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayVersionMismatchFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OverlayVersionMismatchFlg</label>
    <type>Checkbox</type>
</CustomField>