force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ReloadMode__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReloadMode__c</fullName>
    <label>再読み込み種別</label>
    <length>128</length>
    <type>Text</type>
</CustomField>