force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SaveButton__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveButton__c</fullName>
    <label>保存ボタン表示選択</label>
    <length>255</length>
    <type>Text</type>
</CustomField>