force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityAccessibility__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityAccessibility__c</fullName>
    <label>アクセスビリティ許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>