force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityAssembly__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityAssembly__c</fullName>
    <label>アセンブリ許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>