force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityCopy__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityCopy__c</fullName>
    <label>コピー許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>