force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityEdit__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityEdit__c</fullName>
    <label>編集許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>