force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityExtract__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityExtract__c</fullName>
    <label>ページ抽出許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>