force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityFt__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityFt__c</fullName>
    <label>フォームフィールド入力許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>