force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__securityLevel__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__securityLevel__c</fullName>
    <description>セキュリティレベルです</description>
    <label>セキュリティレベル</label>
    <length>100</length>
    <type>Text</type>
</CustomField>