force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityNote__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityNote__c</fullName>
    <label>注釈許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>