force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SecurityPrint__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SecurityPrint__c</fullName>
    <label>印刷許可</label>
    <length>10</length>
    <type>Text</type>
</CustomField>