force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__SpaceID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SpaceID__c</fullName>
    <label>スペースID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>