force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__WR_FormDefinitionID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__WR_FormDefinitionID__c</fullName>
    <label>帳票定義ID（WR本体）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>